--- a/IndexVestLivros/index.html
+++ b/IndexVestLivros/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VestLivros</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
+
 <body>
-    <div id="layout">
-        <h2> VestLivros </h2>
+    <nav class="navbar bg-primary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">VestLivros</span>
+        </div>
+    </nav>
+
+    <div class="container text-center my-3">
+        <div class="d-flex row-direction justify-content-evenly">
+            <button type="button" class="btn btn-primary">2026</button>
+            <button type="button" class="btn btn-primary">2027</button>
+            <button type="button" class="btn btn-primary">2028</button>
+            <button type="button" class="btn btn-primary">2029</button>
+        </div>
     </div>
-    <div id="botões">
-        <h1>2026</h1>
-        <h1>2027</h1>
-        <h1>2028</h1>
-        <h1>2029</h1>
-    </div>
-    <div class="livros-info">
-        <p> Selecione os anos para a sua leitura </p>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
