--- a/IndexVestLivros/index.html
+++ b/IndexVestLivros/index.html
@@ -7,7 +7,7 @@
     <title>VestLivros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -17,12 +17,25 @@
         </div>
     </nav>
 
-    <div class="container text-center my-3">
+    <div class="container text-center my-5">
         <div class="d-flex row-direction justify-content-evenly">
             <button type="button" class="btn btn-primary">2026</button>
             <button type="button" class="btn btn-primary">2027</button>
             <button type="button" class="btn btn-primary">2028</button>
             <button type="button" class="btn btn-primary">2029</button>
+        </div>
+    </div>
+
+    <div class="card espacoCard" style="width: 18rem;">
+        <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+            <a href="#" class="btn btn-primary">Mais informações</a>
+        </div>
+        <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+            <a href="#" class="btn btn-primary">Mais informações</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
