--- a/IndexVestLivros/paginaInicial.html
+++ b/IndexVestLivros/paginaInicial.html
@@ -40,24 +40,106 @@
         <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">USP</a></li>
             <li><a class="dropdown-item" href="#">UNICAMP</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
             <li><a class="dropdown-item" href="#">Ver todos os livros</a></li>
         </ul>
     </div>
 
-    <div class="card espacoCard text-center" style="width: 18rem;">
-        <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
-                <a href="#" class="btn btn-primary">Mais informações</a>
+    <div class="container">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 g-3 my-5">
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
             </div>
-    </div>
-    <div class="card espacoCard text-center" style="width: 18rem;">
-        <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
-                <a href="#" class="btn btn-primary">Mais informações</a>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
             </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-2">
+                <div class="card espacoCard text-center">
+                    <img src="/IndexVestLivros/img/asmeninas.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">As Meninas - Lygia Fagundes Telles</h5>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
